--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -5,26 +5,28 @@
   -->
 <configuration>
   <configSections>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="configBuilders" type="System.Configuration.ConfigurationBuildersSection, System.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" restartOnExternalChanges="false" requirePermission="false" />
   </configSections>
-  
-    <connectionStrings>
-      <add name="AuditModel" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=SystemAudit;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\SystemAudit.mdf;connect timeout=30;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" /> 
-      
-      <!--add name="AuditModel" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=SystemAudit;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\SystemAudit.mdf;connect timeout=30;" providerName="System.Data.SqlClient" /--> 
-      <!--add name="AuditModel" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\SystemAudit.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /-->
-      <!--add name="AuditModel" connectionString="Data Source=(localdb)\ProjectsV13;Initial Catalog=SystemAudit;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/-->
-  </connectionStrings>
-  
-  <appSettings>
+  <configBuilders>
+    <builders>
+    <add name="Environment" type="Microsoft.Configuration.ConfigurationBuilders.EnvironmentConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.Environment, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" /></builders>
+  </configBuilders>
+    <connectionStrings configBuilders="Environment">
+      <!--add name="AuditModel" connectionString="Server=127.0.0.1;Initial Catalog=SystemAudit;Integrated Security=true;AttachDBFilename=|DataDirectory|\SystemAudit.mdf;connect timeout=30;MultipleActiveResultSets=True;Trusted_Connection=Yes;" providerName="System.Data.SqlClient" /-->
+      <add name="AuditModel" connectionString="Server=35.193.65.138;Database=SystemAudit;User Id=webapp;Password=P@ssw0rd;connect timeout=30;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+
+    </connectionStrings>
+  <appSettings configBuilders="Environment">
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ServiceEndpoint" value="https://openmaps.gov.bc.ca"/>
-    <add key="ServiceResource" value="/geo/pub/ows"/>
-    
+    <add key="ServiceEndpoint" value="https://openmaps.gov.bc.ca" />
+    <add key="ServiceResource" value="/geo/pub/ows" />
+    <add key="AppSetting1" value="3.0.0.0" />
+    <add key="AppSetting2" value="false" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
@@ -78,5 +80,4 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
-  
 </configuration>
