--- a/WebApp/Web.Debug.config
+++ b/WebApp/Web.Debug.config
@@ -14,6 +14,10 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="AuditModel" connectionString="Server=(LocalDB)\MSSQLLocalDB;Initial Catalog=SystemAudit;Integrated Security=true;AttachDBFilename=|DataDirectory|\SystemAudit.mdf;connect timeout=30;MultipleActiveResultSets=True;Trusted_Connection=Yes;" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    </connectionStrings>
+  
   <system.web>
     <!--
       In the example below, the "Replace" transform will replace the entire
