--- a/WebApp/Web.Release.config
+++ b/WebApp/Web.Release.config
@@ -14,6 +14,10 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="AuditModel" connectionString="Server=35.193.65.138;Database=SystemAudit;User Id=webapp;Password=P@ssw0rd;connect timeout=30;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+  </connectionStrings>
+
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
