--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -13,20 +13,16 @@
     <builders>
     <add name="Environment" type="Microsoft.Configuration.ConfigurationBuilders.EnvironmentConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.Environment, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" /></builders>
   </configBuilders>
-    <connectionStrings configBuilders="Environment">
-      <!--add name="AuditModel" connectionString="Server=127.0.0.1;Initial Catalog=SystemAudit;Integrated Security=true;AttachDBFilename=|DataDirectory|\SystemAudit.mdf;connect timeout=30;MultipleActiveResultSets=True;Trusted_Connection=Yes;" providerName="System.Data.SqlClient" /-->
-      <add name="AuditModel" connectionString="Server=35.193.65.138;Database=SystemAudit;User Id=webapp;Password=P@ssw0rd;connect timeout=30;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
-
+    <connectionStrings>
+      <add name="AuditModel" connectionString="Server=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\SystemAudit.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     </connectionStrings>
-  <appSettings configBuilders="Environment">
+  <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="ServiceEndpoint" value="https://openmaps.gov.bc.ca" />
     <add key="ServiceResource" value="/geo/pub/ows" />
-    <add key="AppSetting1" value="3.0.0.0" />
-    <add key="AppSetting2" value="false" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
@@ -80,4 +76,12 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  <system.net>
+    <defaultProxy enabled="true" useDefaultCredentials="true">      
+    </defaultProxy>
+    <settings>
+      <httpWebRequest useUnsafeHeaderParsing="true" />
+      <servicePointManager expect100Continue="false" />
+    </settings>
+  </system.net>
 </configuration>
