--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -14,7 +14,7 @@
     <add name="Environment" type="Microsoft.Configuration.ConfigurationBuilders.EnvironmentConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.Environment, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" /></builders>
   </configBuilders>
     <connectionStrings>
-      <add name="AuditModel" connectionString="Server=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\SystemAudit.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+      <add name="AuditModel" connectionString="Server=35.193.65.138;Database=SystemAudit;User Id=webapp;Password=P@ssw0rd;connect timeout=30;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
     </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
