Making up unit test names

--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -77,7 +77,7 @@
     </defaultConnectionFactory>
   </entityFramework>
   <system.net>
-    <defaultProxy enabled="true" useDefaultCredentials="true">      
+    <defaultProxy enabled="true">      
     </defaultProxy>
     <settings>
       <httpWebRequest useUnsafeHeaderParsing="true" />
